<resources>
    <string name="app_name">SDKPrinterTopwise</string>
    <string name="cancel">Cancel</string>
    <string name="determine">Ok</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="magcard">Magcard</string>
    <string name="pinpad">Pinpad</string>
    <string name="printer">Print</string>
    <string name="psamcard">PSAM Card</string>
    <string name="serialport">Serial-Device</string>
    <string name="system">System</string>
    <string name="systeminf">System Info</string>
    <string name="identifycard">Identify card</string>
    <string name="iccontactcard">IC Card</string>
    <string name="rfid">RF Card</string>
    <string name="executeshellcmd">Execute The Shell Command</string>
    <string name="executeRootCMD">Execute The Root Command</string>
    <string name="getRootAuth">Get The Root Command Fingerprint</string>
    <string name="recovery">Factory reset</string>
    <string name="canRecovery">Whether to Support The Factory Reset</string>
    <string name="getHardwareSNPlaintext">Hardware Serial-Number Text</string>
    <string name="getHardwareSNCiphertext">Hardware Serial-Number Ciphertext</string>
    <string name="pboc_test">PBOC Test</string>
    <string name="basis_test">Basis Test</string>
    <string name="serialport_manager_object">Serial-port Manager Object</string>
    <string name="basis_serialport_no">Basis Serial-port NO</string>
    <string name="device_name">Device Name</string>
    <string name="serialport_device_object">Serial-port Device Object</string>
    <string name="please_input_address">Please Input Address</string>
    <string name="please_input_password">Please Input Password</string>
    <string name="please_input_new_password">Please Input New Password</string>
    <string name="please_input_amount">Please Input Amount</string>
    <string name="please_input_order_no">Please Input Order No</string>
    <string name="please_input_admin_password">Please Input Admin Password</string>
    <string name="please_input_user_name">Please Input User Name</string>
    <string name="test_data">Test Data</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="reset">Reset</string>
    <string name="check_card">Check Card</string>
    <string name="check_card_with_encrypted_TDK">check Card With Encrypted TDK</string>
    <string name="send_apdu_instruction">Send APDU Instruction</string>
    <string name="disconnect">Disconnect</string>
    <string name="amount">Amount</string>
    <string name="next_step">Next Step</string>
    <string name="input_keyboard_display_mode">Please Input The Password Keyboard Display Mode (0 or 1)</string>
    <string name="connection">Connection</string>
    <string name="set_network_panel_display">Set The Network Panel Display</string>
    <string name="set_network_panel_not_display">Set The Network Panel Not Display</string>
    <string name="get_network_panel_is_displayed">Get Network Panel Whether Is Displayed</string>
    <string name="set_panel_blue">Set Panel Blue</string>
    <string name="set_panel_white">Set Panel White</string>
    <string name="get_panel_color">Get Panel Color</string>
    <string name="set_3G_signal_is_displayed">Set 3G Signal Is Displayed</string>
    <string name="set_clock_is_displayed">Set Whether The Clock Is Displayed</string>
    <string name="restore">Factory Reset</string>
    <string name="set_panel_color">Set The Panel Color</string>
    <string name="set_date_is_displayed">Set Whether The Date Is Displayed</string>
    <string name="set_ethernet_connection_is_displayed">Set Whether The Ethernet Connection Is Displayed</string>
    <string name="set_wifi_status_coexist_with_3G">Set Wifi Status Coexist With 3G</string>
    <string name="set_display_wifi_icon">Set Whether to Display Wifi Icon</string>
    <string name="get_web_panel_coordinates">Get The web Panel Coordinates</string>
    <string name="set_web_panel_coordinates">Set The web Panel Coordinates</string>
    <string name="get_date_format">Get The Date Format</string>
    <string name="set_time_format">Set The Time Format</string>
    <string name="get_time_format">Get The Time Format</string>
    <string name="set_date_format">Set The Date Format</string>
    <string name="cancel_check_card">Cancel Check Card</string>
    <string name="cancel_check_encrypted_card">Cancel Check Encrypted Card</string>
    <string name="consume">Consume</string>
    <string name="read_e_cash_balance">Reading the electronic cash balance</string>
    <string name="read_card_transaction_log">Read card transaction log</string>
    <string name="read_the_looped_log">Read the looped log</string>
    <string name="read_kernel_data">Read kernel data</string>
    <string name="increase_public_key_parameters">Add public key</string>
    <string name="update_public_key_parameters">Update the public key</string>
    <string name="clear_public_key_parameters">Clear the public key</string>
    <string name="clear_the_transaction_log">Clear the pay log</string>
    <string name="interrupt_the_PBOC_process">Pause of the PBOC</string>
    <string name="end_the_PBOC_process">End of the PBOC</string>
    <string name="add_aid">Add AID</string>
    <string name="update_aid">Update AID</string>
    <string name="clear_aid">Clear AID</string>
    <string name="set_tlv1">Setting parameters</string>
    <string name="set_tlv2">Setting parameters(UTF-8)</string>
    <string name="set_tlv3">Setting parameters(UTF-16)</string>
    <string name="set_tlv4">Setting parameters(GBK)</string>
    <string name="import_online_result">Import online result</string>
    <string name="isexist_aid_publicKey">Is exist AID and public key</string>
    <string name="pp_tip">Input password on pinpad</string>
    <string name="passwd">Input password on pinpad</string>
    <string name="please_select_password_keyboard_type">Choice of pinpad type</string>
    <string name="built_in">Internal</string>
    <string name="external">External</string>
    <string name="password_keyboard_mode_setting">Set pinpad mode</string>
    <string name="order">Order</string>
    <string name="out_of_order">Out of order</string>
    <string name="read_the_online_PIN">Read online PIN</string>
    <string name="customize_PIN">Customize PIN</string>
    <string name="input_the_PIN_twice">Input PIN twice</string>
    <string name="inject_the_master_key_plain_text">Inject master key</string>
    <string name="inject_PIK">Inject PIK</string>
    <string name="inject_TDK">Inject TDK</string>
    <string name="inject_the_master_key_encrypted_MAK">Inject  MAK</string>
    <string name="TDK_data_encryption">Encryption TDK datas</string>
    <string name="TDK_data_decryption">Decryption TDK datas</string>
    <string name="get_random_number">Get random number</string>
    <string name="cancel_PIN_input">Cancel pin input</string>
    <string name="delete_ped_key">Delete ped key</string>
    <string name="read_offline_PIN">Read offline PIN</string>
    <string name="inject_TEK">Inject TEK</string>
    <string name="inject_the_TEK_encrypted_master_key">Inject master</string>
    <string name="inject_TEK_encrypted_MAK">Inject MAK</string>
    <string name="inject_TEK_encrypted_PIN">Inject PIK</string>
    <string name="inject_TEK_encrypted_TDK">Inject TDK</string>
    <string name="MAC_calculation">Calculation MAC</string>
    <string name="password_keyboard_display">Display pinpad</string>
    <string name="confirm_PIN_input">Confirm PIN</string>
    <string name="terminal_sn_str">SN</string>
    <string name="silent_instal_str">Silent install</string>
    <string name="uninstal_str">Uninstall</string>
    <string name="ksn_str">KSN</string>
    <string name="driver_version_str">Driver version</string>
    <string name="current_sdk_version_str">SDK Version</string>
    <string name="update_system_time_str">Update system time</string>
    <string name="stroage_path_str">Storage path</string>
    <string name="update_terminal_driver_str">Update terminal driver</string>
    <string name="imsi_no_str">IMSI</string>
    <string name="terminal_mode_str">Terminal mode</string>
    <string name="iccid_str">ICCID</string>
    <string name="imei_str">IMEI</string>
    <string name="hardware_version_str">Hardware version</string>
    <string name="safety_firmware_str">Safety firmware info</string>
    <string name="manufacturer_name_str">Manufacturer</string>
    <string name="sys_info_str">Android System info</string>
    <string name="sys_version_str">Android ROM Version info</string>
    <string name="kernel_info_str">Kernel info</string>
    <string name="reboot_str">Reboot</string>
    <string name="specification_number_str">Specification number</string>
    <string name="update_firmware_str">Update firmware</string>
    <string name="query_update_state_str">Query update state</string>
    <string name="set_apn_str">Set APN</string>
    <string name="get_apn_list_str">Get APN List</string>
    <string name="select_apn_str">Select APN</string>
    <string name="input_apn_name_str">Input APN name</string>
    <string name="delete_apn_str">Delete APN</string>
    <string name="psim_card_no_str">PSIM card number</string>
    <string name="device_serial_no_str">Device serial-number</string>
    <string name="manufacturer_serial_no_str">Manufacturer number</string>
    <string name="device_infos_str">All system info</string>
    <string name="current_sdk_versions_str">Get current sdk version</string>
    <string name="print_status_str">Get print status</string>
    <string name="print_text_str">Print Text</string>
    <string name="print_custom_text_str">Print Custom Text</string>
    <string name="print_barcode_str">Print BarCode</string>
    <string name="print_bitmap_str">Print Bitmap</string>
    <string name="print_big_buy_str">Print Buy(big)</string>
    <string name="print_small_buy_str">Print Buy(small)</string>
    <string name="print_bitmaps_str">Print Bitmaps</string>
    <string name="print_tickertape">Print Ticker Tape</string>
    <string name="print_bias">Print Slash</string>
    <string name="print_string_test">Print String Test</string>
    <string name="set_print_gray">Set print gray level</string>
    <string name="get_print_message">Get print message</string>
    <string name="print_black_block">Print blackBlock</string>
    <string name="print_diamond">Print Diamond</string>
    <string name="print_bias_meter">Printer A Meter</string>
    <string name="print_ten_times_receipts">Ten times receipts</string>
    <string name="cuttingPaper">Cutting Paper</string>
    <string name="auto_cutting_paper">Auto cutting paper</string>
    <string name="print_input_test">Print Input Test</string>
    <string name="print_input_textsize">Please select text size</string>
    <string name="print_textsize_small">Small</string>
    <string name="print_textsize_normal">Normal</string>
    <string name="print_textsize_large">Large</string>
    <string name="print_input_align">Please select alignment</string>
    <string name="print_align_left">Left</string>
    <string name="print_align_center">Center</string>
    <string name="print_align_right">Right</string>
    <string name="print_input_default_text">Please input print text or code</string>
    <string name="print_input_style_qrcode">QR Code</string>
    <string name="print_input_style_text">Text</string>
    <string name="print_input_style_barcode">Bar Code</string>
    <string name="print_input_style">Please select print style</string>
    <string name="print_grid">Print Grid</string>
    <string name="print_string_image_test">print string image test</string>
    <string name="print_drag_test">Print Drag</string>
    <string name="print_high_temperature_test">Print High Temperature</string>
    <string name="printRollback">Print Rollback</string>
    <string name="setPrintLedState">Set Print Led State</string>
</resources>